# skincare_analysis

./: .gitignore  README.md  pyproject.toml  successful_post_range.csv  successful_post_range_nb_func.csv
.streamlit/: config.toml
backend/: main.py
backend/data_source/: Ingredient_Mapping.csv  data_connection.py
backend/models/: competitor_analysis.py  hashtags.py  ingredients.py  sentiment.py  successful_posts_drivers.py  topics.py  trend_alternative.py  trending_songs.py  trends.py  trends_tdif.py  trends_tdif_alternative.py  viralMusic.py  viralvideos.py
backend/preprocessing/: preprocessing.py
dashboard/: app.py  data_loader.py
dashboard/views/: home.py  ingredients.py  successful_posts.py  topics.py  trends.py  viral_videos.py
data/: common_words_caption.ipynb  hashtags_over_time_profile_posts.ipynb  post_profile_hashtags_as_array.csv  posts_hashtags_exploration.ipynb  posts_influencer_performance.ipynb  profile_posts_analysis.ipynb
data/filtered_data/: posts_profiles.csv
data_exploration/: common_words_caption.ipynb  common_words_comments.ipynb  hashtags_over_time_hashtag_posts.ipynb  posts_hashtags_exploration.ipynb  posts_influencer_performance.ipynb  profile_posts_analysis.ipynb  query.sql  skincare_dataset_online.ipynb  test.ipynb  tiktok_transcrips.ipynb
notebooks/: EDA.ipynb  basic_EDA_posts.ipynb  comments_ingredients.ipynb  comments_sentiment_analysis.ipynb  common_ingredients_and_routines.ipynb  common_words_comments.ipynb  hashtag_growth.ipynb  hashtags_models.ipynb  hashtags_over_time_updated.ipynb  posts_hashtags_exploration.ipynb  shap_vs_author_fans.csv  shap_vs_hour.csv  shap_vs_hour_posting.csv  shap_vs_isAd.csv  shap_vs_video_duration.csv  shap_vs_word_count.csv  successful_post.ipynb  successful_post_range.csv  test.ipynb  test2.ipynb  tiktok_transcrips.ipynb  topics.ipynb  trending_hashtags.ipynb  trending_keywords_tfidf.ipynb  trends.ipynb  trends2.ipynb  trends_new.ipynb
notebooks-not-done/: FIX_comments_sentiment_analysis_topic_clusters.ipynb  FIX_posts_influencer_performance.ipynb  successful_post.ipynb
notebooks/AdditionalStuff/: influencer_performance.ipynb
notebooks/AdvancedEDA/: common_ingredients_and_routines.ipynb  common_words_caption.ipynb  influencer_performance.ipynb
notebooks/HashtagsDeepDive/: hashtags_deepdive.ipynb  hashtags_models.ipynb
notebooks/Sentiment/: sentiment_analysis_topic_clusters_inital.ipynb  verify_sentiment.ipynb
notebooks/SuccessfulPost/: successful_post_approach.ipynb
notebooks/Trends/: deprioritized_trend_ensemble_modeling.ipynb
notebooksHannah/: Common_words_caption.ipynb  EDA.ipynb  EDA_common_words_caption.ipynb  EDA_posts.ipynb  EDA_posts_hashtags_exploration.ipynb  comments_sentiment_analysis.ipynb  comments_topics_sentiment_analysis.ipynb  common_words_comments.ipynb  successful_post.ipynb  trends.ipynb  trends_tfidf.ipynb
notebooksRitu/: Hashtags_Like_TikTok.ipynb  comments_ingredients.ipynb  comments_routines.ipynb  common_ingredients_and_routines.ipynb  hashtags_deepdive.ipynb  hashtags_models.ipynb  hashtags_over_time_hashtag_posts.ipynb  kaggle_skincare_dataset.ipynb  profile_posts_analysis.ipynb  test.ipynb  tiktok_transcrips.ipynb
sentiment/: comments_sentiment_analysis.ipynb
skincare/analysis/: comments_sentiment_analysis.ipynb  hashtags.py  ingredients.py  keywords.py  sentiment.py  topics.py  trending_songs.py  trends.py  trends_tdif.py  viralvideos.py
skincare/frontend/: Ritu_old_comment.py  frontend.py
skincare/pipeline/: ingredientsBeiersdorf.py  preprocessing.py
skincare/scripts/: config.py  data_connection.py  (+2 more)
sql/: comments.sql  hashtags.sql  posts.sql  profiles.sql  transcripts.sql
trends/: trends.ipynb
(+2 files in other folders)
