[project]
name = "skincare-analysis"
version = "0.1.0"
description = "Skincare analysis for Gen Z on TikTok data"
authors = [
    {name = "Hannah Schlaucher",email = "hanschlau@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch (==2.2.2)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "notebook (>=7.4.1,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
    "numpy (==1.26.4)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "bertopic (>=0.17.0,<0.18.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "stopwordsiso (>=0.6.1,<0.7.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "rake-nltk (>=1.0.6,<2.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "protobuf (>=6.30.2,<7.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "google-cloud (>=0.34.0,<0.35.0)",
    "google-cloud-bigquery (>=3.31.0,<4.0.0)",
    "gcloud (>=0.18.3,<0.19.0)",
    "db-dtypes (>=1.4.2,<2.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "burst-detection (>=0.1.3,<0.2.0)"
]
[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

